// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> should render with help text 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  margin-top: 3px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(220,27%,98%,1);
  border-color: hsla(216,19%,89%,1);
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c8:hover + div,
.c8:focus + div {
  background-color: hsla(216,19%,89%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c4 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c10 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  margin-right: 0px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 4px;
  margin-bottom: 4px;
  gap: 4px;
}

<div>
  <div
    aria-labelledby="checkbox-group-21-label"
    class="c0"
    display="flex"
    role="group"
  >
    <span
      id="checkbox-group-21-label"
      style="width: auto;"
    >
      <div
        class="c1"
        display="flex"
      >
        <div
          class="c2"
          color="hsla(216, 27%, 36%, 1)"
          font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
          font-size="0.75rem"
          font-style="normal"
          font-weight="700"
        >
          Select fruits
          <div
            class="c3"
          >
            <p
              class="c4 Text__StyledText-wkh56f-0"
              color="hsla(217, 56%, 17%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            />
            <p
              class="c4 Text__StyledText-wkh56f-0"
              color="hsla(217, 56%, 17%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              , Select one
            </p>
          </div>
        </div>
        <div
          class="c5"
        />
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c6"
        display="flex"
      >
        <label
          class="c7"
        >
          <input
            aria-checked="false"
            aria-describedby="checkbox-22-helptext-24"
            aria-disabled="false"
            aria-errormessage="checkbox-22-errortext-23"
            aria-hidden="true"
            aria-invalid="false"
            aria-required="false"
            class="c8"
            role="checkbox"
            type="checkbox"
            value="apple"
          />
          <div
            class="c9"
          >
            <div
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                  fill="hsla(220, 27%, 98%, 1)"
                />
              </svg>
            </div>
            <div
              style="opacity: 0; position: absolute; display: flex; animation: fadeOut 150ms cubic-bezier(0.17, 0, 1, 1);"
            />
          </div>
          <div
            class=""
          >
            <div
              class="c10"
              color="hsla(216, 27%, 36%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              Apple
            </div>
          </div>
        </label>
        <label
          class="c7"
        >
          <input
            aria-checked="false"
            aria-describedby="checkbox-25-helptext-27"
            aria-disabled="false"
            aria-errormessage="checkbox-25-errortext-26"
            aria-hidden="true"
            aria-invalid="false"
            aria-required="false"
            class="c8"
            role="checkbox"
            type="checkbox"
            value="mango"
          />
          <div
            class="c9"
          >
            <div
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                  fill="hsla(220, 27%, 98%, 1)"
                />
              </svg>
            </div>
            <div
              style="opacity: 0; position: absolute; display: flex; animation: fadeOut 150ms cubic-bezier(0.17, 0, 1, 1);"
            />
          </div>
          <div
            class=""
          >
            <div
              class="c10"
              color="hsla(216, 27%, 36%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              Mango
            </div>
          </div>
        </label>
        <label
          class="c7"
        >
          <input
            aria-checked="false"
            aria-describedby="checkbox-28-helptext-30"
            aria-disabled="false"
            aria-errormessage="checkbox-28-errortext-29"
            aria-hidden="true"
            aria-invalid="false"
            aria-required="false"
            class="c8"
            role="checkbox"
            type="checkbox"
            value="orange"
          />
          <div
            class="c9"
          >
            <div
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                  fill="hsla(220, 27%, 98%, 1)"
                />
              </svg>
            </div>
            <div
              style="opacity: 0; position: absolute; display: flex; animation: fadeOut 150ms cubic-bezier(0.17, 0, 1, 1);"
            />
          </div>
          <div
            class=""
          >
            <div
              class="c10"
              color="hsla(216, 27%, 36%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              Orange
            </div>
          </div>
        </label>
      </div>
      <span
        style="display: flex; flex-direction: row; align-items: center;"
      >
        <span
          class="c11"
          color="hsla(216, 27%, 36%, 1)"
          font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
          font-size="0.6875rem"
          font-style="italic"
          font-weight="400"
        >
          Select one
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> should render with label 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  margin-top: 3px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(220,27%,98%,1);
  border-color: hsla(216,19%,89%,1);
}

.c3 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c8:hover + div,
.c8:focus + div {
  background-color: hsla(216,19%,89%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c4 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c10 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  margin-right: 0px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 4px;
  margin-bottom: 4px;
  gap: 4px;
}

<div>
  <div
    aria-labelledby="checkbox-group-10-label"
    class="c0"
    display="flex"
    role="group"
  >
    <span
      id="checkbox-group-10-label"
      style="width: auto;"
    >
      <div
        class="c1"
        display="flex"
      >
        <div
          class="c2"
          color="hsla(216, 27%, 36%, 1)"
          font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
          font-size="0.75rem"
          font-style="normal"
          font-weight="700"
        >
          Select fruits
          <div
            class="c3"
          >
            <p
              class="c4 Text__StyledText-wkh56f-0"
              color="hsla(217, 56%, 17%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            />
            <p
              class="c4 Text__StyledText-wkh56f-0"
              color="hsla(217, 56%, 17%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              , 
            </p>
          </div>
        </div>
        <div
          class="c5"
        />
      </div>
    </span>
    <div
      class=""
    >
      <div
        class="c6"
        display="flex"
      >
        <label
          class="c7"
        >
          <input
            aria-checked="false"
            aria-describedby="checkbox-1-helptext-3"
            aria-disabled="false"
            aria-errormessage="checkbox-1-errortext-2"
            aria-hidden="true"
            aria-invalid="false"
            aria-required="false"
            class="c8"
            role="checkbox"
            type="checkbox"
            value="apple"
          />
          <div
            class="c9"
          >
            <div
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                  fill="hsla(220, 27%, 98%, 1)"
                />
              </svg>
            </div>
            <div
              style="opacity: 0; position: absolute; display: flex; animation: fadeOut 150ms cubic-bezier(0.17, 0, 1, 1);"
            />
          </div>
          <div
            class=""
          >
            <div
              class="c10"
              color="hsla(216, 27%, 36%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              Apple
            </div>
          </div>
        </label>
        <label
          class="c7"
        >
          <input
            aria-checked="false"
            aria-describedby="checkbox-4-helptext-6"
            aria-disabled="false"
            aria-errormessage="checkbox-4-errortext-5"
            aria-hidden="true"
            aria-invalid="false"
            aria-required="false"
            class="c8"
            role="checkbox"
            type="checkbox"
            value="mango"
          />
          <div
            class="c9"
          >
            <div
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                  fill="hsla(220, 27%, 98%, 1)"
                />
              </svg>
            </div>
            <div
              style="opacity: 0; position: absolute; display: flex; animation: fadeOut 150ms cubic-bezier(0.17, 0, 1, 1);"
            />
          </div>
          <div
            class=""
          >
            <div
              class="c10"
              color="hsla(216, 27%, 36%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              Mango
            </div>
          </div>
        </label>
        <label
          class="c7"
        >
          <input
            aria-checked="false"
            aria-describedby="checkbox-7-helptext-9"
            aria-disabled="false"
            aria-errormessage="checkbox-7-errortext-8"
            aria-hidden="true"
            aria-invalid="false"
            aria-required="false"
            class="c8"
            role="checkbox"
            type="checkbox"
            value="orange"
          />
          <div
            class="c9"
          >
            <div
              style="opacity: 0; position: absolute; display: flex;"
            >
              <svg
                aria-hidden="true"
                fill="none"
                height="16px"
                viewBox="0 0 16 16"
                width="16px"
              >
                <path
                  d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
                  fill="hsla(220, 27%, 98%, 1)"
                />
              </svg>
            </div>
            <div
              style="opacity: 0; position: absolute; display: flex; animation: fadeOut 150ms cubic-bezier(0.17, 0, 1, 1);"
            />
          </div>
          <div
            class=""
          >
            <div
              class="c10"
              color="hsla(216, 27%, 36%, 1)"
              font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
              font-size="0.875rem"
              font-style="normal"
              font-weight="400"
            >
              Orange
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;
